// api/proto/portfolio_service.proto
syntax = "proto3";

package portfolioservice;

option go_package = "momentum-trading-platform/api/proto/portfolio_service";

service PortfolioService {
  rpc UpdatePortfolio(UpdatePortfolioRequest) returns (PortfolioUpdate) {}
  rpc GetPortfolioStatus(PortfolioStatusRequest) returns (PortfolioStatus) {}
  rpc RebalancePortfolio(RebalanceRequest) returns (PortfolioUpdate) {}
}

message UpdatePortfolioRequest {
  string date = 1;
}

message PortfolioUpdate {
  repeated Trade trades = 1;
  PortfolioStatus updated_status = 2;
}

message Trade {
  string symbol = 1;
  TradeType type = 2;
  int32 quantity = 3;
  double price = 4;
}

enum TradeType {
  BUY = 0;
  SELL = 1;
}

message PortfolioStatusRequest {}

message PortfolioStatus {
  repeated Position positions = 1;
  double cash_balance = 2;
  double total_value = 3;
  string last_update_date = 4;
}

message Position {
  string symbol = 1;
  int32 quantity = 2;
  double average_price = 3;
  double current_price = 4;
  double market_value = 5;
}

message RebalanceRequest {
  string date = 1;
}