syntax = "proto3";

package strategy;

option go_package = "github.com/migojipsa/strategy/proto/data";

message DataPoint {
    string symbol = 1;
    string timestamp = 2;
    double open = 3;
    double high = 4;
    double low = 5;
    double close = 6;
    double adjclose = 7;
    double volume = 8;
    map<string, double> indicators = 9;
}

message HistoricalData {
    repeated DataPoint data_points = 1;
}

message TradeAction {
    string symbol = 1;
    string action = 2; // "BUY" or "SELL"
    double price = 3;
    string timestamp = 4;
}

message StrategyRequest {
    string symbol = 1;
    string start_date = 2;
    string end_date = 3;
    string strategy_type = 4;
}

message StrategyResponse {
    repeated TradeAction trade_actions = 1;
}
